crates/rome_formatter/tests/specs/prettier/js/ternaries/nested-in-condition.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: nested-in-condition.js

---
# Input
```js
$var = ($number % 10 >= 2 && ($number % 100 < 10 || $number % 100 >= 20)
? kochabCooieGameOnOboleUnweave
: annularCooeedSplicesWalksWayWay)
  ? anodyneCondosMalateOverateRetinol
  : averredBathersBoxroomBuggyNurl;

const value = (bifornCringerMoshedPerplexSawder
? askTrovenaBeenaDependsRowans
: glimseGlyphsHazardNoopsTieTie)
  ? true
    ? true
    : false
  : true
  ? true
  : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
);

```

# Output
```js
$var =
  (
    $number % 10 >= 2 && ($number % 100 < 10 || $number % 100 >= 20) ? kochabCooieGameOnOboleUnweave : annularCooeedSplicesWalksWayWay
  ) ? anodyneCondosMalateOverateRetinol : averredBathersBoxroomBuggyNurl;

const value = (
  bifornCringerMoshedPerplexSawder ? askTrovenaBeenaDependsRowans : glimseGlyphsHazardNoopsTieTie
)
  ? true
    ? true
    : false
  : true
    ? true
    : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
)

```

# Errors
```
error[SyntaxError]: expected `')'` but instead found `Sub`
   ┌─ nested-in-condition.js:23:6
   │
23 │     <Sub />
   │      ^^^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:23:11
   │
23 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:25:11
   │
25 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:27:11
   │
27 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ nested-in-condition.js:29:4
   │
29 │   </Element>
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:30:1
   │
30 │ ) : (
   │ ^ Expected an expression here


```


